tests/snapshots/run_wpt_conformance__coreml_argMax_float16_4D_tensor__axis_3__all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
arg_min_max.https.any.js argMax float16 4D tensor, axis=3, all options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_argmax: Output '0' has incorrect type for operator 'ios17.reduce_argmax'. Expected { tensor<int32, [...]>, tensor<uint16, [...]> }; got tensor<int64, [2, 1, 4, 1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    argMaxInput: f16[2, 1, 4, 3];
  }

  nodes {
    [argMaxOutput] = argMax(argMaxInput, keepDimensions=true, label="", outputDataType="int64");
  }

  outputs { argMaxOutput; }
}
