tests/snapshots/run_wpt_conformance__coreml_argMax_float16_4D_tensor__axis_3__options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
arg_min_max.https.any.js argMax float16 4D tensor, axis=3, options.keepDimensions=true, coreml
 Failed to dispatch graph: output 'argMaxOutput': CoreML produced 24 bytes, descriptor expects 32

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    argMaxInput: f16[2, 1, 4, 3];
  }

  nodes {
    [argMaxOutput] = argMax(argMaxInput, keepDimensions=true, label="", outputDataType="int32");
  }

  outputs { argMaxOutput; }
}
